# algo3-tp3

./: .gitignore  CMakeLists.txt  Graficos Backtracking Con Podas.twb  Graficos Backtracking Sin Podas.twb  Graficos Heuristicas.twb  Graficos Two List.twb  Graficos.twb  Heuristicas.twb  convert.py  experiments.py  filter_header.py  generate.py  random_input_generator.py  test.in  test.sts  test_backtracking.py  test_greedy.py  test_heuristics.py  test_tools.py  test_twolist.py
docs/: main.tex
docs/examples/4/1/: example4_1_1.dot  example4_1_5.dot
docs/examples/4/2/: example4_2_1.dot  example4_2_3.dot  example4_2_4.dot  example4_2_5.dot
docs/graphs/ej1/: ej1_intro_1c.dot  ej1_intro_1c_impl.dot  ej1_intro_2c.dot  ej1_intro_2c_impl.dot  ej1_intro_2n.dot  ej1_intro_2n_impl.dot  genPng.sh
examples/: example3_5.dot  example3_6.dot
examples/problem 3/: example3_0.dot  example3_1.dot  example3_2.dot  example3_3.dot  example3_4.dot  example3_5.dot  example3_6.dot  example3_7.dot  example3_8.dot  example3_9.dot
examples/problem 4/: example4_0.dot
examples/problem 4/primera vecindad/: example4_1.dot  example4_1_0.dot  example4_1_2.dot  example4_1_3.dot  example4_1_4.dot  example4_2.dot  example4_3.dot  example4_4.dot  example4_5.dot
examples/problem 4/segunda vecindad/: example4_2_0.dot  example4_2_2.dot
src/: ColorStorage.h  Coloring.cpp  Coloring.h  ConflictColoring.h  DGraph.cpp  DGraph.h  Graph.cpp  Graph.h  Problem.cpp  Problem.h  Problem1.cpp  Problem1.h  Problem2.cpp  Problem3.cpp  Problem4.cpp  Statistics.h  main.cpp
tests/: ej1.in  ej1.sts
